fixed chat overflowed text

--- a/django/src/static/styles/chat-room.css
+++ b/django/src/static/styles/chat-room.css
@@ -1,23 +1,36 @@
 .chat-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	overflow: hidden;
 }
 
 .chat-messages {
-    flex: 1;
-    padding: 10px;
-    overflow-y: auto;
-    background-color: #869D9D;
-    min-height: 300px; /* Set a minimum height to prevent shrinking */
+	flex: 1;
+	padding: 10px;
+	overflow-y: auto;
+	background-color: #869d9d;
+	min-height: 300px; /* Set a minimum height to prevent shrinking */
 }
 
-.chat-message {
+/* .chat-message {
     margin-bottom: 10px;
     padding: 10px;
+} */
+
+.chat-row {
+	flex-grow: 1;
+	display: flex-inline;
+	white-space: pre-wrap; /* Preserve whitespace and wrap text */
+	overflow-wrap: break-word; /* Break long words onto the next line */
+	word-wrap: break-word; /* For older browsers */
+	word-break: break-word; /* Ensure word breaks properly */
+	max-width: 100%; /* Ensure the row doesn't exceed the container width */
+	text-align: left;
+	/* background-color: #00b3b3; */
+	/* padding: 0px 5px 0px 0px; Proper padding format */
 }
 
 /* .chat-message.sent {
@@ -31,29 +44,29 @@
 } */
 
 .chat-input {
-    display: flex;
-    padding: 10px;
-    background-color: #1EDDDD;
+	display: flex;
+	padding: 10px;
+	background-color: #1edddd;
 }
 
 .chat-input input {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #E5FCFC;
-    border-radius: 5px;
-    margin-right: 10px;
+	flex: 1;
+	padding: 10px;
+	border: 1px solid #e5fcfc;
+	border-radius: 5px;
+	margin-right: 10px;
 	outline: none;
 }
 
 .chat-input button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+	padding: 10px 20px;
+	background-color: #007bff;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
 }
 
 .chat-input button:hover {
-    background-color: #0056b3;
+	background-color: #0056b3;
 }
